@@ -177,6 +177,7 @@ Fixes:
    * Fix elm_conform didn't set size hint when keypad on.
    * Fix elm_conform didn't change indicator mode when create.
    * After elm_win is created, if there is no manual focus setting, only elm_win should get focus when focus state is changed.
+   * Fix the toolbar cannot be unselected when it's mode is ELM_OBJECT_SELECT_MODE_ALWAYS.
    
 Removals:
 
